# fuse

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  README.md  fuse.repos  fuse_plugins.xml  package.xml  techstack.md  techstack.yml
fuse/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
fuse_constraints/: CHANGELOG.rst  CMakeLists.txt  README.md  fuse_plugins.xml  package.xml  rosdoc.yaml  suitesparse-extras.cmake
fuse_constraints/benchmark/: CMakeLists.txt  benchmark_normal_delta_pose_2d.cpp  benchmark_normal_prior_pose_2d.cpp
fuse_constraints/cmake/: FindSUITESPARSE.cmake  FindSuiteSparse.cmake  LICENSE
fuse_constraints/src/: absolute_constraint.cpp  absolute_orientation_3d_stamped_constraint.cpp  absolute_orientation_3d_stamped_euler_constraint.cpp  absolute_pose_2d_stamped_constraint.cpp  absolute_pose_3d_stamped_constraint.cpp  absolute_pose_3d_stamped_euler_constraint.cpp  dummy_constraint.cpp  fixed_3d_landmark_constraint.cpp  fixed_3d_landmark_simple_covariance_constraint.cpp  marginal_constraint.cpp  marginal_cost_function.cpp  marginalize_variables.cpp  normal_delta.cpp  normal_delta_orientation_2d.cpp  normal_delta_pose_2d.cpp  normal_prior_orientation_2d.cpp  normal_prior_orientation_3d.cpp  normal_prior_pose_2d.cpp  normal_prior_pose_3d.cpp  normal_prior_pose_3d_euler.cpp  relative_constraint.cpp  relative_orientation_3d_stamped_constraint.cpp  relative_pose_2d_stamped_constraint.cpp  relative_pose_3d_stamped_constraint.cpp  relative_pose_3d_stamped_euler_constraint.cpp  reprojection_error_constraint.cpp  reprojection_error_snavelly_constraint.cpp  uuid_ordering.cpp  variable_constraints.cpp  variable_order.cpp
fuse_constraints/test/: CMakeLists.txt  cost_function_gtest.h  cost_function_gtest.hpp  legacy_marginal_version0.txt  problem-21-11315-pre.txt  test_absolute_constraint.cpp  test_absolute_orientation_2d_stamped_constraint.cpp  test_absolute_orientation_3d_stamped_constraint.cpp  test_absolute_orientation_3d_stamped_euler_constraint.cpp  test_absolute_pose_2d_stamped_constraint.cpp  test_absolute_pose_3d_stamped_constraint.cpp  test_absolute_pose_3d_stamped_euler_constraint.cpp  test_bal_problem.cpp  test_fixed_3d_landmark_constraint.cpp  test_fixed_3d_landmark_constraint.py  test_fixed_3d_landmark_simple_covariance_constraint.cpp  test_marginal_constraint.cpp  test_marginalize_variables.cpp  test_normal_delta_pose_2d.cpp  test_normal_prior_pose_2d.cpp  test_normal_prior_pose_3d.cpp  test_normal_prior_pose_3d_euler.cpp  test_relative_constraint.cpp  test_relative_pose_2d_stamped_constraint.cpp  test_relative_pose_3d_stamped_constraint.cpp  test_relative_pose_3d_stamped_euler_constraint.cpp  test_reprojection_error_constraint.cpp  test_reprojection_error_snavelly_constraint.cpp  test_uuid_ordering.cpp  test_variable_constraints.cpp  test_variable_order.cpp
fuse_core/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  boost-extras.cmake  package.xml
fuse_core/src/: async_motion_model.cpp  async_publisher.cpp  async_sensor_model.cpp  callback_wrapper.cpp  ceres_options.cpp  constraint.cpp  constraint_deserializer.cpp  fuse_echo.cpp  graph.cpp  graph_deserializer.cpp  loss.cpp  manifold_adapter.cpp  parameter.cpp  sensor_model.cpp  serialization.cpp  time.cpp  timestamp_manager.cpp  transaction.cpp  transaction_deserializer.cpp  uuid.cpp  variable.cpp  variable_deserializer.cpp
fuse_core/test/: CMakeLists.txt  async_motion_model.test  async_publisher.test  async_sensor_model.test  callback_wrapper.test  example_constraint.h  example_constraint.hpp  example_loss.h  example_loss.hpp  example_variable.h  example_variable.hpp  legacy_variable_deserialization.txt  parameter.test  parameter.yaml  test_async_motion_model.cpp  test_async_publisher.cpp  test_async_sensor_model.cpp  test_callback_wrapper.cpp  test_constraint.cpp  test_eigen.cpp  test_error_handler.cpp  test_local_parameterization.cpp  test_loss.cpp  test_message_buffer.cpp  test_parameter.cpp  test_throttled_callback.cpp  test_timestamp_manager.cpp  test_transaction.cpp  test_util.cpp  test_uuid.cpp  test_variable.cpp  throttled_callback.test  util.test  util.yaml
fuse_doc/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml  rosdoc.yaml  rosdoc2.yaml
fuse_doc/doc/: conf.py  getting_started.rst  index.rst
fuse_graphs/: CHANGELOG.rst  CMakeLists.txt  fuse_plugins.xml  package.xml
fuse_graphs/benchmark/: benchmark_create_problem.cpp  example_variable.h
fuse_graphs/src/: hash_graph.cpp
fuse_graphs/test/: CMakeLists.txt  covariance_constraint.h  covariance_constraint.hpp  example_constraint.h  example_constraint.hpp  example_loss.h  example_loss.hpp  example_variable.h  example_variable.hpp  test_hash_graph.cpp
fuse_loss/: CHANGELOG.rst  CMakeLists.txt  fuse_plugins.xml  package.xml
fuse_loss/cmake/: FindQWT.cmake  FindQwt.cmake
fuse_loss/src/: arctan_loss.cpp  cauchy_loss.cpp  composed_loss.cpp  dcs_loss.cpp  fair_loss.cpp  geman_mcclure_loss.cpp  huber_loss.cpp  loss_function.cpp  pseudo_huber_loss.cpp  scaled_loss.cpp  softlone_loss.cpp  tolerant_loss.cpp  trivial_loss.cpp  tukey_loss.cpp  welsch_loss.cpp
fuse_loss/test/: CMakeLists.txt  test_composed_loss.cpp  test_huber_loss.cpp  test_loss_function.cpp  test_qwt_loss_plot.cpp  test_scaled_loss.cpp  test_tukey_loss.cpp
fuse_models/: CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  README.md  fuse_plugins.xml  package.xml
fuse_models/benchmark/: CMakeLists.txt  benchmark_unicycle_2d_state_cost_function.cpp
fuse_models/src/: acceleration_2d.cpp  basic_error_handler.cpp  imu_2d.cpp  (+18 more)
fuse_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
fuse_optimizers/: CHANGELOG.rst  CMakeLists.txt  package.xml
fuse_publishers/: CHANGELOG.rst  CMakeLists.txt  fuse_plugins.xml  package.xml
fuse_test/: CMakeLists.txt  fuse_plugins.xml  package.xml
fuse_tutorials/: CHANGELOG.rst  CMakeLists.txt  fuse_plugins.xml  package.xml  rosdoc.yaml  rosdoc2.yaml
fuse_variables/: CHANGELOG.rst  CMakeLists.txt  README.md  fuse_plugins.xml  package.xml
fuse_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml  rviz_plugins.xml
(+633 files in other folders)
