<?xml version="1.0"?>
<package format="2">
  <name>fuse</name>
  <version>0.4.1</version>
  <description>
    The fuse metapackage
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fuse_constraints</exec_depend>
  <exec_depend>fuse_core</exec_depend>
  <exec_depend>fuse_doc</exec_depend>
  <exec_depend>fuse_graphs</exec_depend>
  <exec_depend>fuse_models</exec_depend>
  <exec_depend>fuse_msgs</exec_depend>
  <exec_depend>fuse_optimizers</exec_depend>
  <exec_depend>fuse_publishers</exec_depend>
  <exec_depend>fuse_variables</exec_depend>
  <exec_depend>fuse_viz</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
