<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse</name>
  <version>1.0.1</version>
  <description>
    The fuse metapackage.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <license>BSD</license>

  <author email="swilliams@locusrobotics.com">Stephen Williams</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fuse_constraints</exec_depend>
  <exec_depend>fuse_core</exec_depend>
  <exec_depend>fuse_doc</exec_depend>
  <exec_depend>fuse_graphs</exec_depend>
  <exec_depend>fuse_models</exec_depend>
  <exec_depend>fuse_msgs</exec_depend>
  <exec_depend>fuse_optimizers</exec_depend>
  <exec_depend>fuse_publishers</exec_depend>
  <exec_depend>fuse_variables</exec_depend>
  <exec_depend>fuse_viz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
