<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse_constraints</name>
  <version>1.0.1</version>
  <description>
    The fuse_constraints package provides a set of commonly used constraint types, such as direct measurements on \
    state variables (absolute constraints) or measurements of the state changes (relative constraints).
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <license>BSD</license>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>eigen</depend>
  <depend>libceres-dev</depend>
  <depend>suitesparse</depend>

  <build_depend>fuse_core</build_depend>
  <build_depend>fuse_graphs</build_depend>
  <build_depend>fuse_variables</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>fuse_core</exec_depend>
  <exec_depend>fuse_graphs</exec_depend>
  <exec_depend>fuse_variables</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>benchmark</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
